--- a/website/frontend/angular.json
+++ b/website/frontend/angular.json
@@ -54,10 +54,11 @@
             }
           }
         },
-        "serve": {
+        "serve": {      
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "frontend:build"
+            "browserTarget": "frontend:build",
+            "port": 5000
           },
           "configurations": {
             "production": {
